<resources>
    <string name="app_name">코다</string>
    <string name="auth_pref_key">auth</string>
    <string name="loginType">loginType</string>
    <string name="accessToken">accessToken</string>
    <string name="refreshToken">refreshToken</string>
    <string name="accessTokenExpiresIn">accessTokenExpiresIn</string>
    <string name="submit">확인</string>
    <string name="cancel">취소</string>
    <string name="bottomnavigation_title_alldiary">모아보기</string>
    <string name="bottomnavigation_title_receiveddiary">도착한 일기</string>
    <string name="bottomnavigation_title_mydiary">내 일기</string>
    <string name="bottomnavigation_title_my">마이페이지</string>

    <string name="onboarding_go_to_login">로그인하러 가기</string>
    <string name="onboarding_coda_start">"코다 시작하기"</string>
    <string name="onboarding_sign_up">"회원가입 하기"</string>

    <string name="onboarding_button_next">넘어가기</string>
    <string name="onboarding_button_start">시작하기</string>
    <string name="onboarding_certify">"인증하기"</string>
    <string name="onboarding_login">로그인</string>
    <string name="onboarding_button_write_start">기록 시작하기</string>
    <string name="onboarding_ment_first">매일 아침 7시,\n누군가의 일기를 받고\n코멘트를 써줄 수 있어요.</string>
    <string name="onboarding_ment_second">누군가 작성해준\n코멘트를\n읽을 수 있어요.</string>
    <string name="onboarding_ment_third">일기와 코멘트를,\n코다에서\n모아볼 수 있어요.</string>
    <string name="onboarding_ment_sign_up_success">회원가입 완료!\n코다에서\n첫번째 일기를\n작성해보세요.</string>
    <string name="onboarding_password_send">비밀번호를 전송했어요. 이메일을 확인해 주세요.</string>
    <string name="onboarding_email">아이디(이메일)</string>
    <string name="onboarding_password">비밀번호</string>
    <string name="onboarding_noaccount">코다 계정이 없으신가요?</string>
    <string name="onboarding_email_hint">coda@coda.com</string>
    <string name="onboarding_password_hint">****</string>
    <string name="onboarding_makeaccount">회원가입</string>
    <string name="onboarding_find_password">비밀번호 찾기</string>
    <string name="onboarding_email_incorrect">이메일 양식에 맞춰주세요.</string>
    <string name="onboarding_send_auth">인증번호 보내기</string>
    <string name="onboarding_password_incorrect">양식에 맞춰주세요.</string>
    <string name="onboarding_password_check_incorrect">일치하지 않습니다.</string>
    <string name="onboarding_password_check">비밀번호 확인</string>
    <string name="onboarding_password_condition">영문자, 숫자, 특수문자를 포함해 8~16자 작성해 주세요.</string>
    <string name="onboarding_sign_up_agree_notice">회원가입 시 코다의 개인정보 취급 방침 및 이용 약관에 동의합니다.</string>
    <string name="onboarding_find_password_notice">코다 가입시 사용했던\n아이디(이메일)을 입력해 주세요.</string>
    <string name="onboarding_send_password">비밀번호 전송하기</string>
    <string name="onboarding_send_email_notice">이메일로 인증번호가 전송되었습니다.\n확인 후 입력해 주세요.</string>
    <string name="onboarding_code_incorrect">인증번호가 일치하지 않아요.</string>
    <string name="onboarding_cannot_found_email">해당 이메일을 가지고 있는\n사용자가 없어요</string>
    <string name="onboarding_complete_auth">인증완료</string>
    <string name="onboarding_send_password_complete">비밀번호 전송 완료!\n이메일을 확인해 주세요.</string>
    <string name="diary_test_text">내가 서툴고 불안해 보였나요.\n그건 내가 진심이었단 증거입니다</string>
    <string name="diary_test_date">2022년 02월 21일</string>
    <string name="diary_test_head">배가 고프다</string>
    <string name="calendar_with_diary_button_write_text">오늘의 일기 쓰기</string>
    <string name="calendar_with_diary_button_text">오늘은 어떤 하루였나요?</string>
    <string name="write_diary_head_hint">제목을 작성해 주세요.</string>
    <string name="write_diary_content_hint">내용을 작성해 주세요.</string>
    <string name="write_diary_content_100_hint">내용을 100자 이상 작성해 주세요.</string>
    <string name="mydiary_text_decoration">오늘은 기록이 없어요. 기록을 하고 코멘트를 받아봐요 :)</string>
    <string name="write_text">작성하기</string>
    <string name="store_text">저장하기</string>
    <string name="store">저장</string>
    <string name="send_text">전송하기</string>
    <string name="temp_store_text">임시저장</string>
    <string name="show_all">전체보기</string>
    <string name="calendar_with_diary_comment_soon">코멘트가 곧 도착해요 :) 조금만 기다려주세요.</string>
    <string name="bottom_sheet_type_comment_text">다른 누군가에게 전송하고 코멘트를 받아볼게요.</string>
    <string name="bottom_sheet_type_alone_text">전송하지 않고 혼자 볼게요.</string>
    <string name="bottom_sheet_head_text">일기 저장유형을 선택해 주세요.</string>
    <string name="backButton">backButton</string>
    <string name="deleteButton">deleteButton</string>
    <string name="editButton">editButton</string>
    <string name="write_comment_diary_notice">코멘트를 받기 위해서는 100자 이상 작성해야 해요.</string>
    <string name="comment_diary_text_limit">%s/100자 이상 작성</string>
    <string name="upload_temp_time_comment_diary">일기 전송은 다가오는 오전 7시에 종료돼요.</string>
    <string name="upload_temp_comment_please">임시 저장된 일기예요. 일기를 전송해주세요.</string>
    <string name="diary_delete_warning">정말 삭제하시나요?\n삭제된 일기는 복구할 수 없어요.</string>
    <string name="diary_send_warning">다른 누군가에게 일기가 전송됩니다.\n전송 후에는 수정 및 삭제가 어렵습니다.\n전송하시겠어요?</string>
    <string name="diary_send_notice">전송되었습니다.\n곧 코멘트가 도착할거예요!</string>
    <string name="diary_content_dummy_data">내가 서툴고 불안해보였나요\n그건 내가 진심이었단 증거입니다\n소중하지 않았다면
                \n왜 그토록 마음을 기울였겠어요\n망설이고 비틀거리고\n안절부절 못하면서\n\n황경민의 밤 열한시</string>
    <string name="write_diary_back">지금 나가면 작성한 일기가 날아가요.\n그래도 나가시나요?</string>
    <string name="diary_send_complete">전송완료</string>
    <string name="comment_wait">전송 후 코멘트 도착까지 조금만 기다려주세요.</string>
    <string name="received_diary_click">도착한 코멘트 보기</string>
    <string name="empty_comment">아쉽게도 누군가로부터 코멘트가 도착하지 않았어요.</string>
    <string name="comment_content">괜찮아. 우리는 모두 처음 사는 인생이잖아.\n너무 서툰 것에 마음 쓰지마. 너만의 어려움이\n있겠지만, 그걸 내가 다 이해할 수는 없겠지만,\n그래도 응원을 보내. 힘내.</string>
    <string name="comment_head">누군가의 코멘트</string>
    <string name="comment_report">신고하기</string>
    <string name="already_pass_diary_send_time">일기전송 시간이 지났어요..</string>
    <string name="arrived_comment">코멘트가 도착했어요. 확인해 주세요!</string>
    <string name="write_diary_yet">아직 일기를 쓸 날이 오지 않았어요!</string>
    <string name="no_comment">아쉽게도 코멘트가 도착하지 않았어요.\n그래도 오늘의 기록은 내일의 기억이 될 거예요 :)</string>
    <string name="gatherdiary_nodiary">작성해둔 일기가 없어요!</string>
    <string name="binding_date_format">%s년 %월</string>
    <string name="look_period">기간별 보기</string>
    <string name="choice_date_text">날짜 선택</string>
    <string name="arrived_diary">도착한 일기</string>
    <string name="report">신고하기</string>
    <string name="received_diary_comment_head">내가 보내는 코멘트</string>
    <string name="send_text1">보내기</string>
    <string name="comment_write_hint">일기를 읽고, 따뜻한 코멘트를 달아주세요</string>
    <string name="no_received_diary_yet">매일 아침 7시에 누군가의 일기가 도착합니다.\n 도착한 일기를 읽고 따뜻한 코멘트를 남겨주세요 :)</string>
    <string name="comment_write_limit">%s/20자 이상 작성</string>
    <string name="send_comment_notice">코멘트를 전송합니다.\n 전송 후에는 수정 및 삭제가 어렵습니다.\n 전송하시겠어요?</string>
    <string name="report_content">신고 사유를 자세히 작성해 주세요.\n사실과 다를 경우 이용 제재를\n받을 수 있습니다.</string>
    <string name="mypage">마이페이지</string>
    <string name="my_temperature">나의 온도</string>
    <string name="temperature_notice">보낸 코멘트가 \'좋아요\'를 받을 때 온도가 채워집니다.</string>
    <string name="sended_comment">보낸 코멘트</string>
    <string name="push_alarm">푸시알림</string>
    <string name="terms_and_policy">약관 및 정책</string>
    <string name="temperature_thumb">temperature thumb</string>
    <string name="my_account">내 계정</string>
    <string name="logout">로그아웃</string>
    <string name="signout">회원탈퇴</string>
    <string name="signout_notice">탈퇴하시면 모든 일기와 코멘트가 삭제됩니다.\n삭제된 모든 글은 복구 할 수 없습니다.\n정말 탈퇴하시나요?</string>
    <string name="do_signout">탈퇴하기</string>
    <string name="policy">개인정보 처리 방침</string>
    <string name="terms">이용 약관</string>
    <string name="no_comment_write">보낸 코멘트가 없어요.</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="change">변경하기</string>
    <string name="write_comment">코멘트 작성하기</string>
    <string name="yet_write_comment">‘도착한 일기’의 코멘트를 작성해야\n내게 온 코멘트를 확인할 수 있어요.</string>
    <string name="no_write_comment">‘도착한 일기’의 코멘트를 작성하지 않아서\n코멘트를 놓쳤어요. 다음에는 꼭 작성해주세요.</string>
    <string name="logo">로고</string>
    <string name="push_arrived_comment">코멘트 도착</string>
    <string name="block">차단하기</string>
    <string name="block_notice">차단한 글은 다시 볼 수 없습니다.\n정말 차단하시겠어요?</string>
    <string name="find_password_notice">임시 비밀번호를 발급하시겠어요?</string>
    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
    <string name="start_coda">코다\n시작하기</string>
    <string name="login_with_email">이메일로 시작하기</string>
    <string name="login_with_kakao">카카오로 시작하기</string>
    <string name="write_code">인증번호를 입력해주세요</string>
    <string name="accepts_terms">약관 동의</string>
    <string name="terms_condition">서비스 이용에 꼭 필요한 약관입니다.\n정책 및 약관을 클릭하여 내용을 확인해 주세요.</string>
    <string name="all_accepts">전체 동의</string>
    <string name="policy_accept">[필수] 개인 정보 처리 방침</string>
    <string name="terms_accept">[필수] 서비스 이용 약관</string>
    <string name="push_accept_condition">동의 시 \'코멘트\' 도착 알림을 받을 수 있어요!</string>
    <string name="push_accept">[선택] 앱 푸시 알림 수신</string>
    <string name="diary_type_comment">코멘트 받는 일기</string>
    <string name="diary_type_arrow">DiaryTypeArrow</string>
    <string name="send">전송</string>
    <string name="select_diary_type">일기 유형 선택</string>
    <string name="diary_type_alone">혼자 쓰는 일기</string>
</resources>