<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fragment1"
        android:icon="@drawable/ic_navi_write_light"
        android:title="@string/bottomnavigation_title_mydiary"
        />
    <item
        android:id="@+id/fragment2"
        android:icon="@drawable/ic_navi_mail_light"
        android:title="@string/bottomnavigation_title_receiveddiary"
        />
    <item
        android:id="@+id/fragment3"
        android:icon="@drawable/ic_navi_diary_light"
        android:title="@string/bottomnavigation_title_alldiary"
        />
    <item
        android:id="@+id/fragment4"
        android:icon="@drawable/ic_navi_mypage_light"
        android:title="@string/bottomnavigation_title_my"
        />
</menu>